css/style.css
*{
    margin: 0;
    padding: 0;
}

/* HEADER */

/* TOP-CONTENT */
#ms_logo{
    width: 80px;
    margin-right: 20px;
    vertical-align: baseline;
}
/* TOP-CONTENT */

/* BOTTOM-CONTENT */
.ms_drop_nav{
    right: 0;
    text-align: center;
}

.ms_drop_bot{
    display: inline-block; 
}

.ms_link{
    color: black;
    text-decoration: none;
}

.ms_link::before{
    font-family: "Font Awesome 5 Free";
    font-weight: 800;
    content: "\f111";
    color: blue;
    font-size: 5px;
    padding: 10px;
    vertical-align: middle;
}

#ms_search{
    font-size: 30px;
    color: black;
}
/* BOTTOM-CONTENT */

/* MAIN */

/* SECTION-RETURNAL-HERO */
.ms_sect_hero{
    margin-top: 120px;
    color: white;
    width: 100%;
}

.ms_bg_img{
    background-image: url("../img/jumbo-bg.png");
    background-position: center;
    background-size: cover;
}

.ms_returnal_img{
    width: 60%;
}

.ms_btn{
    border-radius: 20px;
    padding: 5px 10px;
}

.ms_btn_red{
    background-color: red;
    border-color: darkred;
    color: white;
}
/* SECTION-RETURNAL-HERO */

/* SECTION-PLAY-5 */
.ms_btn_blue{
    background-color: #2d64e6;
    border-color: darkblue;
    color: white;
}

.ms_col_text{
    color: #727272;
}

.ms_calc_img{
    width: calc(100% / 3 - 10px);
}






/* RESPONSIVE */
@media all and (min-width: 575px) {}

/* SMALL */
@media all and (min-width: 576px) {}
/* SMALL */

/* MEDIUM */
@media all and (min-width: 768px){ 
    /* SECTION-PLAY-5 */
    .ms_calc_img{
        width: calc(100% / 5 - 10px);
    }
    div.d-flex.flex-wrap{
        justify-content: space-between;
    }
}
/* MEDIUM */

/* LARGE */
@media all and (min-width: 992px) {
    /* SECTION-RETURNAL */
    .ms_returnal_img {
        width: 20%;
    }
    .ms_p_small{
        max-width: 39%;
    }
}
/* LARGE */

